--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "fast-xml-parser": "^4.5.3",
     "framer-motion": "^11.18.2",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.545.0",
